--- a/Proyecto2/src/AppCliente/vista/FrmTipoPedido.form
+++ b/Proyecto2/src/AppCliente/vista/FrmTipoPedido.form
@@ -110,6 +110,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="comerRestauranteBttMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comerRestauranteBttActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="recogerBtt">
